--- a/Day_2_CRA_States_Props_useEffects/package.json
+++ b/Day_2_CRA_States_Props_useEffects/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo-app",
+  "name": "day-2-cra-states-props-useeffects",
   "private": true,
   "version": "0.0.0",
   "type": "module",
